<resources>
    <string name="app_name">AOCR</string>
    <string name="addToContacts">Add to Contacts</string>
    <string name="postData">Post Data</string>
    <string name="loadImage">Load Image</string>
    <string name="openCamera">Open Camera</string>
    <string name="name">Full Name</string>
    <string name="loginUsingPassword">Login</string>
    <string name="getPasswordByText">Get Password By Text</string>
    <string name="firstNamePlusLastName">First Name + Last Name</string>
    <string name="passWord">Password</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="phoneNumberTenDigit">10 Digit Phone Number</string>
    <string name="countryCode">Code</string>
    <string name="emailID">Email ID</string>
    <string name="companyName">Company name</string>
    <string name="position">Position at Company</string>
    <string name="city">City</string>
    <string name="website">Website URL</string>
    <string name="pinCode">Pin Code</string>
    <string name="statusPleaseLoadImage">Select Image and run OCR</string>
    <string name="statusLoadingImage">Loading Image</string>
    <string name="statusImageLoadedRunOCR">Image Loaded. Run OCR</string>
    <string name="statusImageFailedToLoad">Image failed to load</string>
    <string name="toastNoInfoToAddToContact">No information to add to contacts!</string>
    <string name="statusAttemptingOCR">Attempting OCR</string>
    <string name="statusAttemptingPostData">Attempting Post Data</string>
    <string name="statusOCRResults">OCR Results</string>
    <string name="statusPostDataSuccessful">Post Data Successful</string>
    <string name="statusPostDataFail">Post Data Failure</string>
    <string name="statusWrongPassword">Wrong Password, Try Again.</string>
    <string name="statusFirstLoginBlankPassword">First Login? Try Blank Password</string>
    <string name="imagesProcessedCount">Images Processed: </string>
    <string name="imagesProcessedPercentage">% Images Processed: </string>


    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>

</resources>